--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,12 @@
 .burger input:checked ~ span:nth-of-type(3) {
   @apply -rotate-45 left-[5px] top-7;
 }
+
+.remove-arrow::-webkit-inner-spin-button,
+.remove-arrow::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.remove-arrow {
+    -moz-appearance: textfield;
+}
